# Crinkle

./: .gitignore  README.md  app.json  database.db  main.py  mainfest.webmanifest  pyproject.toml  requirements.txt
static/: sitemap.xml  user.css
static/assets/js/pages/: dashboard.js
static/css/: 404.css  bootstrap-4.4.1.css  main.css  new.css  style.css
static/js/: new.js  script.js
static/promo/css/: style.css
static/promo/js/: main.min.js
templates/: 404.html  add.html  alert.html  bmlet.html  dangerous.html  dashboard.html  demo.html  details.html  edit.html  index.html  landing.html  login.html  notfound.html  password.html  promo.html  public.html  qrcodeview.html  settings.html  signup.html  sitemap.html  sneak.html  success.html
users/CoolCoderSJ/agents/: cdn.txt  google.txt  ip.txt  test.txt
users/CoolCoderSJ/names/: cb.txt  ip.txt
users/CoolCoderSJ/webhooks/: pytutorialipynb.txt
users/forero/agents/: mlytue.txt
