[tool.poetry]
name = "repl_python3_beta_sjurl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
user-agents = "^2.2.0"
bs4 = "^0.0.1"
discord-webhook = "^0.13.0"
pypng = "^0.0.20"
pyqrcode = "^1.2.1"
pytz = "^2021.1"
replit = "^3.0.0"
"web.py" = "^0.62"
easypydb = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
